# home-assitant

./: 7-day-home-assistant-stabilization-checklist.md  AGENTS.md  anker.yaml  anker_ble.py  fluvius.md  home-assistant-stabilization-daily-log-template.md  home-assistant-stabilization-mcp-prompts.md  influxdb-and-recorder.md  jupiter-savings-sensor.md
.github/workflows/: ci.yml
templates/: bluetti_battery_dashboard.yaml  bluetti_battery_economics.yaml  bluetti_battery_setup.md  bluetti_soc_min_max_30d_dashboard.yaml  jupiter_savings_sensor.yaml
zeus/: .gitignore  Dockerfile  README.md  config.example.yaml  pyproject.toml
zeus/deploy/: README.md  argocd-application.example.yaml
zeus/deploy/helm/: Chart.yaml  values.yaml
zeus/deploy/helm/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  pvc.yaml  secret.yaml
zeus/tests/: test_controller.py  test_forecaster.py  test_optimizer.py  test_prices.py  test_reporter.py
zeus/zeus/: __init__.py  config.py  controller.py  discover.py  forecaster.py  ha_client.py  main.py  metrics.py  optimizer.py  prices.py  reporter.py
